modify jekyll themes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,23 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
   <head>
-    <meta charset="utf8">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Quest of Iolo</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
   </head>
   <body>
     <header>
-      <img src="/assets/img/iolo50.png" align="left">
-      <h1>Quest of Iolo</h1>
+      <h1><img src="/assets/img/iolo50.png">Quest of Iolo</h1>
       <nav>
-        <span><a href="/">Home</a></span>
-        <span><a href="/posts">Blog</a></span>
-        <span><a href="/about">About</a></span>
+        <a href="/">Home</a>
+        <a href="/posts">Blog</a>
+        <a href="/artifacts">Artifacts</a>
+        <a href="/about">About</a>
       </nav>
     </header>
     <main>{{content}}</main>
     <footer>
-      <p>&copy; 2023 IoloTheBard. All rights reserved.</p>
+      <p>&copy; 1973-2023 IoloTheBard. All rights reserved.</p>
     </footer>
   </body>
 </html>
