--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Quest of Iolo</title>
+    <meta name="description" content="{{ page.description | default: site.description | strip_html }}"/>
+    <meta name="author" content="{{ page.author | default: site.author }}"/>
+    {% if page.tags %}
+    <meta name="keywords" content="{{ page.tags | join: ',' }}"/>
+    {% endif %}
+    {% assign meta_image = page.image | default: site.image %}
+    {% unless meta_image contains '://' %}
+    {% assign meta_image = meta_image | prepend: site.url %}
+    {% endunless %}
+    <meta property="og:type" content="article"/>
+    <meta property="og:title" content="{{ page.title | default: site.title | strip_html }}"/>
+    <meta property="og:description" content="{{ page.description | default: site.description | strip_html }}"/>
+    <meta property="og:url" content="{{ site.url }}{{ page.url }}"/>
+    <meta property="og:site_name" content="{{ site.title | xml_escape }}"/>
+    <meta property="og:image" content="{{ meta_image }}"/>
+    {% if site.facebook_app_id %}
+    <meta property="fb:app_id" content="{{ facebook_app_id }}" />
+    {% endif %}
+    <meta name="twitter:card" content="summary"/>
+    {% if site.twitter_username %}
+    <meta name="twitter:site" content="@{{ site.twitter_username }}"/>
+    {% endif %}
+    <meta name="twitter:title" content="{{ page.title | default: site.title | strip_html }}"/>
+    <meta name="twitter:description" content="{{ page.description | default: site.description | strip_html }}"/>
+    <meta name="twitter:url" content="{{ site.url }}{{ page.url }}"/>
+    <meta name="twitter:image:src" content="{{ meta_image }}"/>
+    {% if site.google_site_verification %}
+    <meta name="google-site-verification" content="{{ site.google_site_verification }}" />
+    {% endif %}
+    <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html','' }}"/>
+    <link rel="alternate" type="application/rss+xml" href="{{ site.baseurl }}/rss"/>
     <link rel="stylesheet" href="/assets/css/styles.css">
+    <title>{{ page.title | default: 'Home' }} - {{ site.title }}</title>
   </head>
   <body>
     <header>
