--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,6 +1,6 @@
-
 html {
   font-size: 62.5%; /* 10px = 10px / 1browser default(16px) = 62.5% */
+  font-family: monospace;
 }
 
 body {
@@ -62,4 +62,10 @@ pre {
   background: #333;
   color: #0f0;
   padding: 1rem;
+}
+
+.post-content img {
+  max-width: 100%;
+  display: block;
+  margin: 1rem auto;
 }
