--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,22 @@
     <link rel="alternate" type="application/rss+xml" href="{{ site.baseurl }}/rss"/>
     <link rel="stylesheet" href="/assets/css/styles.css">
     <title>{{ page.title | default: 'Home' }} - {{ site.title }}</title>
+    <script src="https://giscus.app/client.js"
+      data-repo="iolo/iolo.github.io"
+      data-repo-id="R_kgDOH6UEWg"
+      data-category="giscus"
+      data-category-id="DIC_kwDOH6UEWs4CV5Qw"
+      data-mapping="pathname"
+      data-strict="0"
+      data-reactions-enabled="1"
+      data-emit-metadata="1"
+      data-input-position="top"
+      data-theme="preferred_color_scheme"
+      data-lang="ko"
+      data-loading="lazy"
+      crossorigin="anonymous"
+      async>
+    </script>
   </head>
   <body>
     <header>
