--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,6 @@ layout: default
   </section>
   <footer>
     <!-- todo: social share links -->
-    <!-- todo: comments -->
+    <div class="giscus"></div>
   </footer>
 </article>
