fix header layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,6 +60,7 @@
   </head>
   <body>
     <header>
+      <img src="/assets/img/iolo50.png" alt="Iolo in Ultima IV with 11x13 pixels"/>
       <h1><img src="/assets/img/iolo50.png" />Quest of Iolo</h1>
       <nav>
         <a href="/">Home</a>
