fix header and styles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,7 @@
   <body>
     <header>
       <img src="/assets/img/iolo50.png" alt="Iolo in Ultima IV with 11x13 pixels"/>
-      <h1><img src="/assets/img/iolo50.png" />Quest of Iolo</h1>
+      <h1>Quest of Iolo</h1>
       <nav>
         <a href="/">Home</a>
         <a href="/posts">Blog</a>
