--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&family=IBM+Plex+Sans+KR:wght@100;400;700&display=swap");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/github.min.css") only screen and (prefers-color-scheme: light);
 @import url("https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/github-dark.min.css") only screen and (prefers-color-scheme: dark);
+:root {
+  --font-body: "7x12x3", "IBM Plex Sans KR", sans-serif;
+  --font-code: "7x12x3", "IBM Plex Mono", monospace;
+}
+
 :root.light-theme {
   --bg-color: #fff;
   --text-color: #333;
@@ -17,15 +22,19 @@
   --link-visted-color: #09f;
 }
 
+@font-face {
+  font-family: "7x12x3";
+  src: url("/assets/font/7x12x3.woff") format("woff"), url("/assets/font/7x12x3.woff2") format("woff2"), url("/assets/font/7x12x3.ttf") format("truetype"), url("/assets/font/7x12x3.otf") format("opentype");
+}
 html, body {
   background-color: var(--bg-color);
   color: var(--text-color);
-  font-family: "IBM Plex Sans KR", sans-serif;
+  font-family: var(--font-body);
   font-size: 62.5%; /* 10px = 10px / 1browser default(16px) = 62.5% */
 }
 
 pre, code, tt, kbd {
-  font-family: "IBM Plex Mono", monospace;
+  font-family: var(--font-code);
 }
 
 a, a:link {
