--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,10 @@
   --font-code: "7x12x3", "IBM Plex Mono", monospace;
 }
 
+@font-face {
+  font-family: "7x12x3";
+  src: url("/assets/font/7x12x3.woff") format("woff"), url("/assets/font/7x12x3.woff2") format("woff2"), url("/assets/font/7x12x3.ttf") format("truetype"), url("/assets/font/7x12x3.otf") format("opentype");
+}
 :root.light-theme {
   --bg-color: #fff;
   --text-color: #333;
@@ -22,10 +26,6 @@
   --link-visted-color: #09f;
 }
 
-@font-face {
-  font-family: "7x12x3";
-  src: url("/assets/font/7x12x3.woff") format("woff"), url("/assets/font/7x12x3.woff2") format("woff2"), url("/assets/font/7x12x3.ttf") format("truetype"), url("/assets/font/7x12x3.otf") format("opentype");
-}
 html, body {
   background-color: var(--bg-color);
   color: var(--text-color);
@@ -70,6 +70,8 @@ body > header {
 body > header > h1 {
   background: url("/assets/img/iolo50.png") no-repeat;
   padding-left: 50px;
+  padding-right: 50px;
+  line-height: 50px;
 }
 body > header > nav {
   font-size: 2rem;
