--- a/content/assets/css/styles.scss
+++ b/content/assets/css/styles.scss
@@ -28,15 +28,20 @@
   --link-visted-color: #09f;
 }
 
+:root.system-font {
+  --font-body: sans-serif;
+  --font-code: monospace;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&family=IBM+Plex+Sans+KR:wght@100;400;700&display=swap');
-@import url("https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/github.min.css") only screen and (prefers-color-scheme:light);
-@import url("https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/github-dark.min.css") only screen and (prefers-color-scheme:dark);
+@import url("https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.10.0/styles/github.min.css") only screen and (prefers-color-scheme:light);
+@import url("https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.10.0/styles/github-dark.min.css") only screen and (prefers-color-scheme:dark);
 
 html, body {
   background-color: var(--bg-color);
   color: var(--text-color);
   font-family: var(--font-body);
-  font-size: 62.5%; /* 10px = 10px / 1browser default(16px) = 62.5% */
+  font-size: 62.5%; /* 10px = 10px / browser default(16px) = 62.5% */
 }
 
 pre, code, tt, kbd {
@@ -62,7 +67,7 @@ a.nolink {
 }
 
 body {
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -90,6 +95,7 @@ body {
     width: 960px;
     max-width: 90%;
     margin: 0 auto;
+    line-height: 1.2em;
   }
 
   > footer {
